[gd_scene load_steps=13 format=2]

[ext_resource path="res://font_stuff/Seagram tfb.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interface/menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://interface/menu/menu.gd" type="Script" id=3]
[ext_resource path="res://resources/menu.png" type="Texture" id=4]
[ext_resource path="res://resources/opcoes.png" type="Texture" id=5]
[ext_resource path="res://resources/novo_jogo.png" type="Texture" id=6]
[ext_resource path="res://resources/sair.png" type="Texture" id=7]
[ext_resource path="res://resources/continuar.png" type="Texture" id=8]
[ext_resource path="res://interface/general_options.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 693, 390 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.129412, 0.129412, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.733333, 0, 0, 0 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
transition_names = [ "continue_game", "new_game", "options", "exit_game" ]

[node name="return_to_menu" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 330.237
margin_top = -184.366
margin_right = 680.237
margin_bottom = -84.3658
rect_min_size = Vector2( 350, 100 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.435294, 0.360784, 1 )
text = "RETORNAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="general_options" parent="." instance=ExtResource( 9 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 505.947
margin_top = 314.252
margin_right = 505.947
margin_bottom = 314.252

[node name="options_menu" type="Control" parent="."]
margin_left = 159.77
margin_top = 70.6353
margin_right = 1183.77
margin_bottom = 70.6353
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
transition_mode = true
transition_names = [ "return_to_menu", "general_options" ]

[node name="continue_game" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.682
margin_top = -162.544
margin_right = 173.318
margin_bottom = -69.5437
rect_min_size = Vector2( 350, 93 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.636
margin_top = -73.5905
margin_right = 183.364
margin_bottom = 16.4095
rect_min_size = Vector2( 360, 90 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.318
margin_top = 10.4991
margin_right = 131.682
margin_bottom = 100.499
rect_min_size = Vector2( 260, 90 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_game" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.3182
margin_top = 89.498
margin_right = 91.6818
margin_bottom = 169.498
rect_min_size = Vector2( 180, 80 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="return_to_menu" to="general_options" method="_save_settings"]
[connection signal="pressed" from="return_to_menu" to="." method="_on_return_to_menu_pressed"]
[connection signal="pressed" from="continue_game" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit_game" to="." method="_on_exit_game_pressed"]
